finished header and main

--- a/index.html
+++ b/index.html
@@ -9,6 +9,163 @@
 </head>
 
 <body>
+    <header class="header">
+        <div class="header__top">
+            <div class="wrapper">
+                <div class="location">
+                    <box-icon name='map'></box-icon>
+                    Новосибирск
+                </div>
+                <div class="tel">
+                    <box-icon type='solid' name='phone'></box-icon>
+                    <a href="tel:+73832279393" class="tel-link">+7 (383) 227-93-93</a>
+                </div>
+            </div>
+        </div>
+        <div class="header__center">
+            <div class="wrapper">
+                <a href="#" class="logo-link">
+                    COMPLEKTECH
+                    <span class="slogan">Стараемся понемногу</span>
+                </a>
+                <button class="cat-btn">
+                    <box-icon name='list-ul'></box-icon>
+                    Каталог
+                </button>
+                <div class="finder">
+                    <input type="text" placeholder="Поиск по сайту">
+                    <!-- <button class="search-btn"> -->
+                    <box-icon name='search' class="bx-xs"></box-icon>
+                    <!-- </button> -->
+                </div>
+                <nav class="nav">
+                    <a href="#" class="nav-link">
+                        <box-icon name='user'></box-icon>
+                        Аккаунт
+                    </a>
+                    <a href="#" class="nav-link">
+                        <box-icon name='cabinet'></box-icon>
+                        Заказы
+                    </a>
+                    <a href="#" class="nav-link">
+                        <box-icon name='cart'></box-icon>
+                        Корзина
+                    </a>
+                </nav>
+            </div>
+        </div>
+        <div class="header__bottom">
+            <div class="wrapper">
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <a href="#" class="cat-link">
+                                Комплектующие
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="#" class="cat-link">
+                                Мониторы
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="#" class="cat-link">
+                                Ноутбуки
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="#" class="cat-link">
+                                Оргтехника и периферийное оборудование
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="#" class="cat-link">
+                                Расходные материалы
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="#" class="cat-link">
+                                Сетевое оборудование
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="#" class="cat-link">
+                                Шнуры и переходники
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="#" class="cat-link">
+                                Блоки питания <br> для ноутбуков и мониторов
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="swp-prev">
+                        <box-icon name='left-arrow-alt'></box-icon>
+                    </div>
+                    <div class="swp-next">
+                        <box-icon name='right-arrow-alt'></box-icon>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main class="main">
+        <section class="main-page">
+            <div class="wrapper">
+                <div class="breadcrumbs">
+                    <a href="#" class="breadcrumb-link">
+                        Главная
+                    </a>
+                    <box-icon name='chevrons-right' class="chevron-right-icon"></box-icon>
+                </div>
+            </div>
+        </section>
+        <section class="category">
+            <div class="wrapper">
+                <h2 class="title">Категории</h2>
+                <ul class="category-list">
+                    <li class="category-item">
+                        <img src="https://img.mvideo.ru/Big/30062114bb.jpg" alt="Комплектующие" class="category-img">
+                        <h3 class="category-title">Комплектующие</h3>
+                    </li>
+                    <li class="category-item">
+                        <img src="https://img.mvideo.ru/Big/30063630bb.jpg" alt="Мониторы" class="category-img">
+                        <h3 class="category-title">Мониторы</h3>
+                    </li>
+                    <li class="category-item">
+                        <img src="https://img.mvideo.ru/Big/30062056bb.jpg" alt="Ноутбуки" class="category-img">
+                        <h3 class="category-title">Ноутбуки</h3>
+                    </li>
+                    <li class="category-item">
+                        <img src="https://img.mvideo.ru/Big/30064615bb.jpg" alt="Оргтехника и периферийное оборудование"
+                            class="category-img">
+                        <h3 class="category-title">Оргтехника и периферийное оборудование</h3>
+                    </li>
+                    <li class="category-item">
+                        <img src="https://c.dns-shop.ru/thumb/st1/fit/500/500/84cdf7149b339604b76cc9aef8d3a165/ff930495b529187651b832336a20fd8692ee501f6c4c46c0e32840fd0fa3ba75.png"
+                            alt="Расходные материалы" class="category-img">
+                        <h3 class="category-title">Расходные материалы</h3>
+                    </li>
+                    <li class="category-item">
+                        <img src="https://img.mvideo.ru/Big/50140836bb.jpg" alt="Сетевое оборудование"
+                            class="category-img">
+                        <h3 class="category-title">Сетевое оборудование</h3>
+                    </li>
+                    <li class="category-item">
+                        <img src="https://img.mvideo.ru/Big/50110638bb.jpg" alt="Шнуры и переходники"
+                            class="category-img">
+                        <h3 class="category-title">Шнуры и переходники</h3>
+                    </li>
+                    <li class="category-item">
+                        <img src="https://img.mvideo.ru/Pdb/4182295b.jpg" alt="Блоки питания для ноутбуков и мониторов"
+                            class="category-img">
+                        <h3 class="category-title">Блоки питания для ноутбуков и мониторов</h3>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
     <script src="./index.js" type="module"></script>
 </body>
 
