--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Комплектех</title>
+    <title>COMPLEKTECH</title>
+    <link rel="stylesheet" href="./styles/index.scss">
 </head>
 
 <body>
@@ -24,7 +25,7 @@
         </div>
         <div class="header__center">
             <div class="wrapper">
-                <a href="#" class="logo-link">
+                <a href="/" class="logo-link">
                     COMPLEKTECH
                     <span class="slogan">Стараемся понемногу</span>
                 </a>
@@ -59,42 +60,42 @@
                 <div class="swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <a href="#" class="cat-link">
+                            <a href="/pages/category.html" class="cat-link">
                                 Комплектующие
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="#" class="cat-link">
+                            <a href="/pages/category.html" class="cat-link">
                                 Мониторы
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="#" class="cat-link">
+                            <a href="/pages/category.html" class="cat-link">
                                 Ноутбуки
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="#" class="cat-link">
+                            <a href="/pages/category.html" class="cat-link">
                                 Оргтехника и периферийное оборудование
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="#" class="cat-link">
+                            <a href="/pages/category.html" class="cat-link">
                                 Расходные материалы
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="#" class="cat-link">
+                            <a href="/pages/category.html" class="cat-link">
                                 Сетевое оборудование
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="#" class="cat-link">
+                            <a href="/pages/category.html" class="cat-link">
                                 Шнуры и переходники
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="#" class="cat-link">
+                            <a href="/pages/category.html" class="cat-link">
                                 Блоки питания <br> для ноутбуков и мониторов
                             </a>
                         </div>
@@ -119,53 +120,182 @@
                     </a>
                     <box-icon name='chevrons-right' class="chevron-right-icon"></box-icon>
                 </div>
-            </div>
-        </section>
-        <section class="category">
-            <div class="wrapper">
+
                 <h2 class="title">Категории</h2>
                 <ul class="category-list">
                     <li class="category-item">
-                        <img src="https://img.mvideo.ru/Big/30062114bb.jpg" alt="Комплектующие" class="category-img">
-                        <h3 class="category-title">Комплектующие</h3>
+                        <a href="/pages/category.html" class="category-link">
+                            <img src="https://img.mvideo.ru/Big/30062114bb.jpg" alt="Комплектующие"
+                                class="category-img">
+                            <h3 class="category-title">Комплектующие</h3>
+                        </a>
                     </li>
+
                     <li class="category-item">
-                        <img src="https://img.mvideo.ru/Big/30063630bb.jpg" alt="Мониторы" class="category-img">
-                        <h3 class="category-title">Мониторы</h3>
+                        <a href="/pages/category.html" class="category-link">
+                            <img src="https://img.mvideo.ru/Big/30063630bb.jpg" alt="Мониторы" class="category-img">
+                            <h3 class="category-title">Мониторы</h3>
+                        </a>
                     </li>
+
                     <li class="category-item">
-                        <img src="https://img.mvideo.ru/Big/30062056bb.jpg" alt="Ноутбуки" class="category-img">
-                        <h3 class="category-title">Ноутбуки</h3>
+                        <a href="/pages/category.html" class="category-link">
+                            <img src="https://img.mvideo.ru/Big/30062056bb.jpg" alt="Ноутбуки" class="category-img">
+                            <h3 class="category-title">Ноутбуки</h3>
+                        </a>
                     </li>
+
                     <li class="category-item">
-                        <img src="https://img.mvideo.ru/Big/30064615bb.jpg" alt="Оргтехника и периферийное оборудование"
-                            class="category-img">
-                        <h3 class="category-title">Оргтехника и периферийное оборудование</h3>
+                        <a href="/pages/category.html" class="category-link">
+                            <img src="https://img.mvideo.ru/Big/30064615bb.jpg"
+                                alt="Оргтехника и периферийное оборудование" class="category-img">
+                            <h3 class="category-title">Оргтехника и периферийное оборудование</h3>
+                        </a>
                     </li>
+
                     <li class="category-item">
-                        <img src="https://c.dns-shop.ru/thumb/st1/fit/500/500/84cdf7149b339604b76cc9aef8d3a165/ff930495b529187651b832336a20fd8692ee501f6c4c46c0e32840fd0fa3ba75.png"
-                            alt="Расходные материалы" class="category-img">
-                        <h3 class="category-title">Расходные материалы</h3>
+                        <a href="/pages/category.html" class="category-link">
+                            <img src="https://c.dns-shop.ru/thumb/st1/fit/500/500/84cdf7149b339604b76cc9aef8d3a165/ff930495b529187651b832336a20fd8692ee501f6c4c46c0e32840fd0fa3ba75.png"
+                                alt="Расходные материалы" class="category-img">
+                            <h3 class="category-title">Расходные материалы</h3>
+                        </a>
                     </li>
+
                     <li class="category-item">
-                        <img src="https://img.mvideo.ru/Big/50140836bb.jpg" alt="Сетевое оборудование"
-                            class="category-img">
-                        <h3 class="category-title">Сетевое оборудование</h3>
+                        <a href="/pages/category.html" class="category-link">
+                            <img src="https://img.mvideo.ru/Big/50140836bb.jpg" alt="Сетевое оборудование"
+                                class="category-img">
+                            <h3 class="category-title">Сетевое оборудование</h3>
+                        </a>
                     </li>
+
                     <li class="category-item">
-                        <img src="https://img.mvideo.ru/Big/50110638bb.jpg" alt="Шнуры и переходники"
-                            class="category-img">
-                        <h3 class="category-title">Шнуры и переходники</h3>
+                        <a href="/pages/category.html" class="category-link">
+                            <img src="https://img.mvideo.ru/Big/50110638bb.jpg" alt="Шнуры и переходники"
+                                class="category-img">
+                            <h3 class="category-title">Шнуры и переходники</h3>
+                        </a>
                     </li>
+
                     <li class="category-item">
-                        <img src="https://img.mvideo.ru/Pdb/4182295b.jpg" alt="Блоки питания для ноутбуков и мониторов"
-                            class="category-img">
-                        <h3 class="category-title">Блоки питания для ноутбуков и мониторов</h3>
+                        <a href="/pages/category.html" class="category-link">
+                            <img src="https://img.mvideo.ru/Pdb/4182295b.jpg"
+                                alt="Блоки питания для ноутбуков и мониторов" class="category-img">
+                            <h3 class="category-title">Блоки питания для ноутбуков и мониторов</h3>
+                        </a>
                     </li>
                 </ul>
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="wrapper">
+            <div class="top-footer">
+                <a href="/" class="logo-link">
+                    COMPLEKTECH
+                </a>
+                <a href="#" class="rights-link">Юридическая информация</a>
+            </div>
+            <div class="bottom-footer">
+                <div class="col">
+                    <h4 class="cat-title">
+                        <a href="/pages/category.html" class="cat-link">
+                            Комплектующие
+                        </a>
+                    </h4>
+                    <!-- <div class="cat-list">
+                        <a href="#" class="cat-list-link">
+                            Приводы DVD и оптические носители
+                        </a>
+                        <a href="#" class="cat-list-link">
+                            Блоки питания
+                        </a>
+                        <a href="#" class="cat-list-link">
+                            Видеокарты
+                        </a>
+                        <a href="#" class="cat-list-link">
+                            Корпуса
+                        </a>
+                        <a href="#" class="cat-list-link">
+                            Материнские платы
+                        </a>
+                        <a href="#" class="cat-list-link">
+                            Накопители данных
+                        </a>
+                        <a href="#" class="cat-list-link">
+                            Оперативная память
+                        </a>
+                        <a href="#" class="cat-list-link">
+                            Платы расширения, опции
+                        </a>
+                        <a href="#" class="cat-list-link">
+                            Процессоры
+                        </a>
+                        <a href="#" class="cat-list-link">
+                            Устройства охлаждения
+                        </a>
+
+                    </div> -->
+                </div>
+                <div class="col">
+                    <h4 class="cat-title">
+                        <a href="/pages/category.html" class="cat-link">
+                            Мониторы
+                        </a>
+                    </h4>
+
+                </div>
+                <div class="col">
+                    <h4 class="cat-title">
+                        <a href="/pages/category.html" class="cat-link">
+                            Ноутбуки
+                        </a>
+                    </h4>
+
+                </div>
+                <div class="col">
+                    <h4 class="cat-title">
+                        <a href="/pages/category.html" class="cat-link">
+                            Оргтехника и периферийное оборудование
+                        </a>
+                    </h4>
+
+                </div>
+                <div class="col">
+                    <h4 class="cat-title">
+                        <a href="/pages/category.html" class="cat-link">
+                            Расходные материалы
+                        </a>
+                    </h4>
+
+                </div>
+                <div class="col">
+                    <h4 class="cat-title">
+                        <a href="/pages/category.html" class="cat-link">
+                            Сетевое оборудование
+                        </a>
+                    </h4>
+
+                </div>
+                <div class="col">
+                    <h4 class="cat-title">
+                        <a href="/pages/category.html" class="cat-link">
+                            Шнуры и переходники
+                        </a>
+                    </h4>
+
+                </div>
+                <div class="col">
+                    <h4 class="cat-title">
+                        <a href="/pages/category.html" class="cat-link">
+                            Блоки питания для ноутбуков и мониторов
+                        </a>
+                    </h4>
+
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="./index.js" type="module"></script>
 </body>
 
