--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMPLEKTECH</title>
-    <link rel="stylesheet" href="./styles/index.scss">
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 
 <body>
@@ -296,7 +296,8 @@
             </div>
         </div>
     </footer>
-    <script src="./index.js" type="module"></script>
+    <!-- <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script> -->
+    <script type="module" src="./index.js"></script>
 </body>
 
 </html>
